root/css/main.css
/*Font Family Google Fonts Spectral and Rubik*/
@import url('https://fonts.googleapis.com/css?family=Rubik:100,100i,300,300i,500,500i|Spectral');

@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'); /* check the link for font-awsome with Emily*/

/*Styles

********FONTS********

font-family: 'Spectral', serif;
font-family: 'Rubik', sans-serif;

********COLORS*******
Dusty Purple #6a304c
OFF WHITE: #f1f0f0
Golden Rod #FFB73D;
Teal #00C5CD;
dusty pink #EA8571;

*/


/* Mobile first queries */

body {
    
    background-color: #f1f0f0;
    font-family: 'Spectral', serif;
}

h1, h2, h3, h4, h5, h6{
    font-family: 'Rubik', sans-serif;
}

.rubik {
    font-family: 'Rubik', sans-serif;
}
/*Button Styles*/

.button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
    font-family: 'Rubik', sans-serif;
    color: #f1f0f0;
    background-color: #6a304c;
    border-color: #6a304c;
    border-radius: 0;
}

.button.button-primary:hover, button.button-primary:hover, input[type="submit"].button-primary:hover, input[type="reset"].button-primary:hover, input[type="button"].button-primary:hover, .button.button-primary:focus, button.button-primary:focus, input[type="submit"].button-primary:focus, input[type="reset"].button-primary:focus, input[type="button"].button-primary:focus {
    color: #6a304c;
    background-color: #f1f0f0;
    border-color: #f1f0f0;
    border-radius: 0;
}

/*HEADER*/
header {
     background-color: #6a304c;
     padding: 5px;      /* It makes the border around the nav when it is shown */
    
}
#logo {
    margin: .2em .2em .2em .2em;
    display: inline;
}
.banner img {
    max-width: 100%;
}

a {
    color: #6a304c;
    text-decoration: none;
    font-weight: 400;
}

header a{
    font-size: 1.1em;
}

header i {
    color: #fff;
    font-size: .8em;
    float: right;
    margin-top: -44px;
    margin-right: .2em;
}


/*nav with JS */
/* Reset */
.menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}


/* Menu Bar */

.main-navigation {
  background-color: #6a304c;
 /* navigatin color gray changed to purple */
  color: #fff;
}

.main-navigation .menu {
  display: none;
}

.main-navigation a {
  color: inherit;
  display: block;
  padding: 10px 10px;
  text-decoration: none;
}

.toggled-on .menu {
  display: block;
}

/* Indent sub-menus */
.main-navigation ul ul {
  margin-left: 2rem;
}

.menu-toggle {
  /*background: none;*/
  border: 0;
  color: #fff;
  cursor: pointer;
  font-size: 1em;
  height: 48px;
  padding: 10px 10px;
}

/* lable Bars */
 nav input[type=checkbox] {
    display: none;
}
 nav input[type=checkbox]:checked ~ .menu {
    display: block;
}

.fa-bars {
    float: right;
}




/*Larger screen*/

@media screen and (min-width: 700px) {
  
  /* Hide the NAvigation Lable */
     label.showMenu {
     display: none;
    }
/* move the nav text adjust to the logo*/
    .menu, .nav-menu, .main-navigation {
        display: inline-block;
    }
    
  /* Hide the menu toggle */
  .menu-toggle {
    display: none;
  }

  
  /* Make sure the menu items display */
  .main-navigation a {
    display: inline-block;
  }
  
  .main-navigation .menu {
    display: block;
  }
  
  .main-navigation li {
    display: inline-block;
    position: relative /* Sub menus are absolutely positioned relative to this*/
  }
  
  /* Display sub-menu items vertically */
  .main-navigation ul ul li {
    float: none;
  }
  
  .main-navigation ul ul a {
    width: 150px;
  }
  
  /* Position sub-menus below their parent, hidden by default */
  .main-navigation ul ul {
    background-color: #6a304c;
    left: -999em;
    margin: 0;
    position: absolute;
    top: 65%;
    z-index: 1000; /* Make sure sub menus display on top, without this there can be issues with multi-line menus */
    opacity: 0.1;
    transition: top 0.2s, opacity 0.2s;
  }

  /* Displays sub menus on hover */
  .main-navigation li:hover > ul,
  .main-navigation li.focus > ul {
    opacity: 1;
    left: auto;
    top: 100%;
    transition: top 0.2s, opacity 0.3s;
  }

  /* Highlight menu options on hover */
  .main-navigation .nav-menu > li:hover > a,
  .main-navigation .nav-menu > li.focus > a {
    
    text-decoration: underline;
  }

  /* Bring 3rd level+ menus to the right, not below */  
  
  .main-navigation .children li > ul {
    top: 45%;
  }
  
  .main-navigation .children li:hover > ul,
  .main-navigation .children li.focus > ul{
    left: 100%;
    top: 0;
  }
  
  /* Within sub-menus change the background on the <a> tag so it doesn't remain highlighted */
  .main-navigation ul ul a:hover,
  .main-navigation ul ul li.focus > a {
  text-decoration: underline;
  }
  
  .main-navigation ul ul {
    margin-left: 0;
  }
}

/*End Nav With JS*/

/*navigation mobil first whithout drop down*/

/*

nav ul {
    list-style-type: none;
    display: none;
}
nav li {
    text-align: center;
    font-family: 'Rubik', sans-serif;
    font-weight: 500;
    text-transform: uppercase;
}

nav li a:hover {
    color:#6a304c;
    background-color: #f1f0f0;
}
nav li a {
    color: #f1f0f0;
    padding: .3em;
    display: block;
}
 nav input[type=checkbox] {
    display: none;
}
 nav input[type=checkbox]:checked ~ ul.menu {
    display: block;
}
.showMenu {
    background-color: #6a304c;
    text-align: right;
    color: #fff;
    cursor: pointer;
}

.fa-bars {
    font-size: 2.8em;

}
*/

/*  drop down mobil first*/

/*
nav ul li ul input[type=checkbox] {display: none;}
nav ul li ul input[type=checkbox]:checked ~ ul.drop {display: block;
}
*/


/* ---- end nav ---- */


/*Main Content*/

#hero {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

#hero .one-half, #donateHeaderTextArea .one-half {
    margin-top:10%;
    margin-bottom: 10%;
    background: rgba(255,255,255,.7);
    padding: 5%;
    text-align: center;
    color: #6a304c;
}



/*Primary Content*/

.primaryContent {
    background: url(../images/banner-1400px.jpg);
}

.primaryContent .button.button-primary{
    background-color: #00C5CD;
    border-color: #00C5CD;
}

/*Secondary Content*/

.secondaryContent {
    background: url(../images/jordan-whitt-145327.jpg);
}

.secondaryContent .button.button-primary{
    background-color: #FFB73D;
    border-color: #FFB73D;
}

/*tertiaryContent*/
.tertiaryContent {
    background: url(../images/henri-meilhac-155942.jpg);
}

.tertiaryContent .button.button-primary{
    background-color: #EA8571;
    border-color: #EA8571;
}

/*END OF MAIN CONTENT HOME PAGE*/


/*About Us*/
img {
    max-width: 100%;
}

.bio {
    display: inline;
    color: #00C5CD;
}
.dustyPurpleTransparent {
    background-color: #cbb7c1;  
}
.tealTransparent {
    background-color:  #b2edf0;
}
.friend{
    background-color: #00C5CD;
    border-color: #00C5CD;
}

.fa-history {
    display: inline;
    color: #00C5CD
}

section:last-child {
    border-bottom: 1px solid gray;
}
/***********************FOOTER*************************/

footer, footer a {
    font-family: 'Rubik', sans-serif;
    font-weight: lighter;
}

footer .container {
    padding-top: 3%;
}

footer h6, footer h6 + p {
    color: #FFB73D;
    line-height: 1.25;
}

footer h6 + p {
    margin-top: -10px;
    font-size: 1.15em;
}

/********************FOOTER EMAIL FORM**************/
footer input[type="email"]{
    border: 2px solid #EA8571;
    border-radius: 0;
    background: none;
    color: #EA8571;
    font-family: 'Rubik', sans-serif;
    font-weight: lighter;
}

footer input[type="email"]:focus{
    border: 2px solid #EA8571;
    outline: 0;
}

footer input[type="email"]::placeholder{
    color: #EA8571;
    font-family: 'Rubik', sans-serif;
    font-weight: lighter;
}

footer input[type="submit"].button-primary{
    background-color: #f1f0f0;
    font-weight: 100;
    border: 2px solid #EA8571;
    color: #EA8571;
}

footer input[type="submit"].button-primary:focus{
    background-color: #f1f0f0;
    font-weight: 100;
    border: 2px solid #EA8571;
    color: #EA8571;
}

footer input[type="submit"].button-primary:hover{
    border: 2px solid #EA8571;
    background-color: #EA8571;
    color: #f1f0f0;
}

/***********FOOTER NAVIGATION******************/

footer .two.columns {
    margin-bottom: 2.5rem;
}

footer .row div:nth-of-type(n+3){
    width: 30%;
}
footer .row div:nth-of-type(n+4){
    margin-left: 5%;
}
footer address {
    font-style: normal;
}

footer ul {
    list-style: none;
}

footer li, footer li a, footer address {
    color: #EA8571;
}

footer li a:hover {
    border-bottom: 2px solid #EA8571;
    color: #EA8571;
}

/*Footer Copyright and social media links*/
.footerBanner {
    color: #f1f0f0;
    background-color: #6a304c;
    text-align: center;
}

.footerBanner .container {
    padding-top: 2%;
}

.footerBanner a {
    color: #f1f0f0;
    display: inline-block;
    padding-bottom: 2%;
}



/*Donate Page*/

.donateHeader {
    background: url(../images/hands.png) no-repeat center;
    background-size: cover;
}
#donationOptions h3 {
    text-align: center;
    padding-top: 60px;
    padding-bottom: 60px;
    color: #6a304c;
    border-bottom: solid 1px #6a304c;
}

.wrapper {
    display: block;
    grid-gap: 10px;
    margin: 80px 0;
}

.box {
  color: green;
  border-radius: 5px;
  padding: 20px;
    
/* border transition */
  position:relative;
  text-align: center;
  transition: 0.5s;
  padding: 20px;
  -webkit-transition:0.5s; /* Safari */
    
/* background-color transition */
  -webkit-transition-property: background-color; /* Safari */
  -webkit-transition-duration: 2s; /* Safari */
  transition-property: background-color;
  transition-duration: 2s;
}

.box:before, .box::after {
  width: 100%;
  height:100%;
  z-index: 3;
  content:'';
  position: absolute;
  top:0;
  left:0;
  box-sizing: border-box;
  -webkit-transform: scale(0); /* Safari */
  transition: 0.5s;
  border-radius: 5px;
}

.box:before {
  border-bottom: 1px solid #6a304c;
  border-left: 1px solid #6a304c;
  -webkit-transform-origin: 0 100%; /* Safari */
}

.box:after {
  border-top: 1px solid #6a304c;
  border-right: 1px solid #6a304c;
  -webkit-transform-origin: 100% 0%; /* Safari */
}

.box:hover::after, .box:hover::before {
  -webkit-transform: scale(1); /* Safari */
}
.box:hover {
    background-color: #fff;
}


.box img, .box .button {
    display: block;
    margin: 0 auto;
}

.box h4 {
    text-align: center;
    color: #6a304c;
    margin-top: 15px;
}

.box p {
    color: #0083A1;
}
 


/* Larger than mobile */
@media (min-width: 426px) {
    
/*****************FOOTER***********************/
footer .two.columns {
    margin-bottom: 0;
}

footer .row div:nth-of-type(n+3){
    width: 13.3333333333%;
}
footer .row div:nth-of-type(n+4){
    margin-left: 4%;
}

    .footerBanner{
        text-align: left;
    }
    
    .footerBanner a{
        float: right;
    }

    
}


/* Larger than tablet */
@media (min-width: 750px) {
   /*Donate Page*/ 
    .wrapper {
          display: grid;
          grid-template-columns: 33% 33% 33%;
    }
    
/*************FOOTER************/

}

